src/test/deca/context/valid/oracle/protected_declaration2.deca
class A {
    protected float f = 0;
    void method(){
        ;
    }
    int method2(){
        return 1;
    }
}