src/test/deca/context/invalid/oracle/mod_float.deca
{
    float f;
    1 % f;
}